--- a/WebContent/css/adminLogin.css
+++ b/WebContent/css/adminLogin.css
@@ -2,6 +2,7 @@
 
 html, body {
 	height: 100%;
+	margin:0px;
 }
 
 #wrap {
@@ -20,7 +21,7 @@ html, body {
 }
 
 #ceng {
-	background: url(images/bg.jpg) no-repeat;
+	background: url(../images/bg.jpg) no-repeat;
 	width: 100%;
 	height: 80%;
 	background-size: cover;
