--- a/WebContent/css/addCart.css
+++ b/WebContent/css/addCart.css
@@ -1,46 +1,39 @@
-
+@charset "utf-8";
 #herder .ware-img{
     margin-top: 10px;
     padding: 0;
 }
 #herder .ware-price{
-    margin-top: 30%;
-    font:bold 12px 微软雅黑;
-    color: #d74a40;
+    margin-top: 25%;
+    font-size: 18px;
+    color:red;
 }
 #herder .ware-id{
-    color:#818284;
-    font:12px 微软雅黑;
-}
-#herder .ware-id span{
-    color:#818284;
-    font: 9px 微软雅黑;
+    color:#aaa;
 }
 #herder{
     padding-bottom: 10px;
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #ccc;
 }
 .container-fluid{
     padding: 0;
 }
 #main p{
     margin: 10px;
-    color: #787878;
-    font: 12px 微软雅黑;
+    color: #aaa;
 }
 .ware-color{
     padding-right: 2px;
 }
 .ware-color li{
-    padding-right: 10px;
+    padding-right: 0;
     padding-left: 8px;
     margin-bottom: 15px;
 }
 .ware-color li div{
-    border:1px solid #c1c1c1;
+    border:1px solid #aaa;
     border-radius: 3px;
-    font: 12px/27px 微软雅黑;
-    color:#232323;
+    font: 14px/30px 微软雅黑;
     text-align: center;
     cursor:pointer;
 }
@@ -52,15 +45,14 @@
     padding-top: 20%;
 }
 .check-style li div{
-    border:1px solid #c1c1c1;
+    border:1px solid #aaa;
     border-radius: 3px;
-    font: 12px/27px 微软雅黑;
-    color:#232323;
+    font: 14px/30px 微软雅黑;
     text-align: center;
     cursor:pointer;
 }
 .check-Lens{
-    border-top: 1px solid #efefef;
+    border-top: 1px solid #ccc;
 }
 .check-Lens-title{
     margin-top: 0px;
@@ -70,9 +62,8 @@
     cursor:pointer;
 }
 .check-Lens-style li .luminosity-select{
-    border:1px solid #c1c1c1;
-    font: 12px/25px 微软雅黑;
-    color:#232323;
+    border:1px solid #aaa;
+    font: 12px/26px Helvetica;
     cursor:pointer;
 }
 .check-Lens-style .check-Lens-style-li{
@@ -82,32 +73,28 @@
     margin-bottom: 60px;
 }
 .borderbold{
-    border: 2px solid #efefef;
+    border: 2px solid #ccc;
 }
 #footer3{
     background: white;
 }
 #footer3 .check-shuoming{
     text-align: center;
-    font:bold 12px/28px 微软雅黑;
-    color:#232323;
+    font-size: 16px;
+    font-weight: bold;
     padding: 5px 0;
 }
 #footer3 .table-1 p{
     text-align: center;
-    margin-bottom: 0;
-    margin-top: 10px;
-    font:10px 微软雅黑;
-    color:#232323;
 }
 #footer3 .table-1 table{
-    background: #c1c1c1;
+    background: #aaaaaa;
     margin: 0 auto;
     margin-bottom: 10px;
 }
 #footer3 .table-1 td{
-    width: 45px;
-    height: 25px;
+    width: 50px;
+    height: 30px;
     border:2px solid white;
 }
 #mengban{
@@ -116,15 +103,16 @@
     top:0px;
     width:100%;
     height:100%;
-    background:rgba(0,0,0,0.5);display:none;
+    background:rgba(0,0,0,0.6);display:none;
+
 }
 #check-Lens .luminosity li div i{
     float:right;
-    font-size: 9px;
+    font-size: 16px;
     font-weight: bold;
 }
 #check-Lens .lens-series .series li div i{
     float:right;
-    font-size: 9px;
+    font-size: 16px;
     font-weight: bold;
 }
