--- a/WebContent/css/order.css
+++ b/WebContent/css/order.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
-body,html{height:100%;font-family: 微软雅黑;}
-#header{height:62px;color:#262628;font-size:16px;border-bottom:1px solid #f1f2f6;background-color:#ffffff;padding-top:7%;}
-#header div i,div{font-size:16px;color:#262628;}
-#header div i{font-size:16px;color:#262628;}
+*{font-family:微软雅黑;font-size:16px;}
+/*兼容iphone5*/
+@media screen and (max-width: 320px) {body{font-size:0.6em;}}
+body,html{height:100%;}
+#header{height:62px;border-bottom:1px solid #f1f2f6;background-color:#ffffff;padding-top:6%;}
+#header div i,div{font-family:微软雅黑;font-size:16px;}
 .address{height:50px;margin-top:60px;padding-top:5px;}
 .address div{line-height:16px;padding:0px;}
-.address div.col-xs-2 i{line-height:16px;padding:0px;color:#262628;}
 .address div span{font-size:12px;}
 .liner{height:4px;background:url("../images/liner.png");}
 #main{background:#f1f1f1;margin:0px;}
@@ -15,15 +16,15 @@ body,html{height:100%;font-family: 微软雅黑;}
 .product .image img{height:100%;display:block;}
 .product div p{margin:0px;font-size: 14px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
 #middle{height:800px;}
-#money{color:#dd3447;font-size: 12px;}
+#money{color:#dd3447;}
 .product div{padding-left:0px;padding-top:3%;}
-#footer{height:125px;background-color:#ffffff;font-size: 16px;color:#2b2b2b;}
+#footer{height:125px;background-color:#ffffff;}
 .money{color:#dd3447;  }
 .money1{height:75px;border-bottom:2px solid #f1f2f6;padding-top: 2%;}
 .money2{height:50px;font-size:16px;line-height:50px;margin:0px;padding:0px;}
-.money2 div{padding-right: 0px;padding-top:0px;padding-bottom:0px;margin:0px;color:#f23030;}
-.money2 div .sub{background-color:#f23030;text-align:center;}
-.sub a{text-decoration:none;color:#ffffff;font-size: 18px;}
-.sub a:focus{text-decoration:none;color:#ffffff;}
+.money2 div{padding-right: 0px;padding-top:0px;padding-bottom:0px;margin:0px;}
+.money2 div .sub{background-color:#dd3447;text-align:center;}
+.sub a{text-decoration:none;color:#050505;}
+.sub a:focus{text-decoration:none;color:#050505;}
 
 
