--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,158 +1,245 @@
-.main{
-    width: 100%;
-    height:100%;
-    overflow: hidden;
-	padding-bottom:50px; 
+.main {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	padding-bottom: 50px;
 }
-.formwrap{
-    width:100%;
-    height:100%;
 
+.formwrap {
+	width: 100%;
+	height: 100%;
 }
-.header{
-    width:100%;
-    margin:0% auto;
-    background-color: white;
-    font-size: 12px;
-    overflow: hidden;
 
+.header {
+	width: 100%;
+	margin: 0% auto;
+	background-color: white;
+	font-size: 12px;
+	overflow: hidden;
 }
-.img0{
-    padding-left: 5%;
-    text-align:center;
+
+.img0 {
+	padding-left: 5%;
+	text-align: center;
 }
-.img0 div{
-	text-align:center;
+
+.img0 div {
+	text-align: center;
 }
-.img1{
-    width:30px;
-    height:35px;
-    padding-top:3%;
-    margin-top: 5%;
+
+.img1 {
+	width: 30px;
+	height: 35px;
+	padding-top: 4%;
+	margin-top: 5%;
 }
+
 .pull-left {
-    float: left !important;
+	float: left !important;
 }
+
 .pull-right {
-    float: right !important;
-}
-#title{
-    text-align: center;
-    padding-right:24%;
-    margin-top:3%;
-    font-size:24px;
-}
-#main{
-    width:100%;
-    height:230px;
-    overflow: hidden;
+	float: right !important;
 }
 
-#big img{
-    float:left;
+#title {
+	text-align: center;
+	padding-right: 24%;
+	margin-top: 3%;
+	font-size: 24px;
 }
-.img2{
-    width:100%;
-    height:100%;
-    margin-top:8%;
-    padding-top: 1%;
+
+#main {
+	width: 100%;
+	height: 230px;
+	overflow: hidden;
 }
+
+#big img {
+	float: left;
+}
+
+.img2 {
+	width: 100%;
+	height: 100%;
+	margin-top: 8%;
+	padding-top: 1%;
+}
+
 .img3 {
-    width: 22px;
-    height: 22px;
-    margin-top:-1px ;
+	width: 22px;
+	height: 22px;
+	margin-top: -1px;
+}
 
+.skill {
+	overflow: hidden;
+	height: 5%;
+	width: 100%;
+	margin-left: 5%;
+	margin-top: 3%;
+	overflow: hidden;
 }
-.skill{
-    overflow: hidden;
-    height:5%;
-    width:100%;
-    margin-left:5%;
-    margin-top:3%;
-    overflow: hidden;
-}
-.seckill{
-    color:#ed6942;
-    width:27%;
-    font-size:12px;
-}
-.seckil2{
-    font-size:12px;
-    text-align: center;
-    color:#ed6942;
-    margin-right:9%;
-}
-.skilleft{
-    margin-left:5%;
-    text-align: left;
-    padding: 0px;
-}
-.span{
-    background-color:#ed6942;
-    text-align: center;
-    color: white;
-}
-.maindiv{	
-    width:90%;
-    height:20%;
-    overflow: hidden;
-    margin:0px auto;
-    margin-top:8%;
-}
-.imgdiv{
-    width:48.5%;
-    height:100%;
-    border: 1px solid #d1d1d1;
-    padding:2% auto;
-    overflow: hidden;
 
+.seckill {
+	color: #ed6942;
+	width: 27%;
+	font-size: 12px;
 }
-.img5{
-    width:100%;
-    height:100%;
 
+.seckil2 {
+	font-size: 12px;
+	text-align: center;
+	color: #ed6942;
+	margin-right: 9%;
 }
-.p1{
-    height:2px;
-    background-color:#e8e8e8;
-    margin-top:1%;
-}
-.line1{
-    width:3%;
-    height:25px;
-    background-color:#ed6942;
-}
-.img6{
-    height:20px;
-    height:20px;
-}
-.footerdiv{
-    width:100%;
-    height:9%;
-    background-color: white;
-    color: #0f0f0f;
-    border-top:1px solid #d1d1d1;
-    padding-bottom:3%;
-}
-.span3{
-    background-color: white;
-    color: #0f0f0f;
-}
- #Kf{
-    background-color:#ff454a;
-}
-p{margin:0 0 0 0;}
-.footer{background-color:#ffffff;border-top:1px solid #ccc;height: 60px;}
-#bottom{position:relative;margin-left:5px;margin-right:5px;height:60px;}
-#bottom .col-xs-2 i{font-size:25px;}
-#bottom .col-xs-2 p{font-family: 微软雅黑;font-size:12px;}
-#bottom>div:nth-child(3) #service{width:40px;height:40px;border-radius: 50%;background:#fff;text-align:center;position:absolute;top:-10px;left:10px;}
-#service div{width:32px;height:32px;border-radius: 50%;background:red;margin-left:4px;margin-top:5px;}
-.sign{  width:13px;height:13px;border:1px solid red;border-radius:6px;color:red;
-    font-size:12px;position:absolute;left:58%;top:2px;background:#fff;text-align:center;
-}
-.sign p{position: absolute;top:-3px;left:2px;}
-#bottom .col-xs-2{width:20%;text-align:center;padding:0px;padding-left:0;padding-right:0;  }
-#bottom>div>p{font-size:12px;}
-.color{color:red;}
 
+.skilleft {
+	margin-left: 5%;
+	text-align: left;
+	padding: 0px;
+}
+
+.span {
+	background-color: #ed6942;
+	text-align: center;
+	color: white;
+}
+
+.maindiv {
+	width: 90%;
+	height: 20%;
+	overflow: hidden;
+	margin: 0px auto;
+	margin-top: 8%;
+}
+
+.imgdiv {
+	width: 48.5%;
+	height: 100%;
+	border: 1px solid #d1d1d1;
+	padding: 2% auto;
+	overflow: hidden;
+}
+
+.img5 {
+	width: 100%;
+	height: 100%;
+}
+
+.p1 {
+	height: 2px;
+	background-color: #e8e8e8;
+	margin-top: 1%;
+}
+
+.line1 {
+	width: 3%;
+	height: 25px;
+	background-color: #ed6942;
+}
+
+.img6 {
+	height: 20px;
+	height: 20px;
+}
+
+.footerdiv {
+	width: 100%;
+	height: 9%;
+	background-color: white;
+	color: #0f0f0f;
+	border-top: 1px solid #d1d1d1;
+	padding-bottom: 3%;
+}
+
+.span3 {
+	background-color: white;
+	color: #0f0f0f;
+}
+
+#Kf {
+	background-color: #ff454a;
+}
+
+p {
+	margin: 0 0 0 0;
+}
+
+.footer {
+	background-color: #ffffff;
+	border-top: 1px solid #ccc;
+	height: 60px;
+}
+
+#bottom {
+	position: relative;
+	margin-left: 5px;
+	margin-right: 5px;
+	height: 60px;
+}
+
+#bottom .col-xs-2 i {
+	font-size: 25px;
+}
+
+#bottom .col-xs-2 p {
+	font-family: 微软雅黑;
+	font-size: 12px;
+}
+
+#bottom>div:nth-child(3) #service {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background: #fff;
+	text-align: center;
+	position: absolute;
+	top: -10px;
+	left: 10px;
+}
+
+#service div {
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	background: red;
+	margin-left: 4px;
+	margin-top: 5px;
+}
+
+.sign {
+	width: 13px;
+	height: 13px;
+	border: 1px solid red;
+	border-radius: 6px;
+	color: red;
+	font-size: 12px;
+	position: absolute;
+	left: 58%;
+	top: 2px;
+	background: #fff;
+	text-align: center;
+}
+
+.sign p {
+	position: absolute;
+	top: -3px;
+	left: 2px;
+}
+
+#bottom .col-xs-2 {
+	width: 20%;
+	text-align: center;
+	padding: 0px;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#bottom>div>p {
+	font-size: 12px;
+}
+
+.color {
+	color: red;
+}
