--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,139 +1,136 @@
-.header{
-    width:100%;
-    height:23px;
-    margin: 20px auto;
-}
-.top{
-
-    float: left;
-    font-size:20px ;
-
-
-}
-#topleft img{
-    width:19px;
-    height:19px;
-    margin-left:19px;
-}
-.topright{
-    width: 80%;
-    height:22px;
-    text-align:center;
-    font-weight:600;
-}
-.main-main{
-    width:97%;
-    heihgt:100%;
-    margin:0 auto;
-}
-.input-a{
-    width:90%;
-    margin:2% auto;
-    border-bottom: 1px solid #e8e8e8;
-    margin-right: auto;
-
+.header {
+	width: 100%;
+	height: 23px;
+	margin: 20px auto;
 }
 
-.text-b:-webkit-autofill{
-    -webkit-box-shadow: 0 0 0px 1000px white  inset !important;
-}
-#text-input,#text-input2{
-    outline: none;
-    border: none;
-    border-style: none;
-    text-shadow: 0 0 0 rgba(0,0,0,0);
-    -webkit-appearance: none;
-    -webkit-user-select: text;
-    /*   outline-color: transparent;*/
-    box-shadow: 0 0 0 rgba(0,0,0,0);
-    font-size: 17px;
-    padding:25px 12px;
-
-
-
-}
-.text-b{
-
-}
-.btndiv1,.divreg{
-    width:90%;
-    margin:20px auto;
-    background-color: #eeeeee;
-
-}
-.btn1{
-    width:100%;
-    height:44px;
-    background-color:#eeeeee;
-    font-size: 20px ;
-    color:#d1d1d1;
-    border-color:#eeeeee;
-    box-shadow: none;
-}
-#btn{
-    box-shadow: none;
-    text-shadow: none;
-    outline: none;
-    border: none;
+.top {
+	float: left;
+	font-size: 20px;
 }
 
+#topleft img {
+	width: 19px;
+	height: 19px;
+	margin-left: 19px;
+}
+
+.topright {
+	width: 80%;
+	height: 22px;
+	text-align: center;
+	font-weight: 600;
+}
+
+.main-main {
+	width: 97%;
+	heihgt: 100%;
+	margin: 0 auto;
+}
+
+.input-a {
+	width: 90%;
+	margin: 2% auto;
+	border-bottom: 1px solid #e8e8e8;
+	margin-right: auto;
+}
+
+.text-b:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
+#text-input, #text-input2 {
+	outline: none;
+	border: none;
+	border-style: none;
+	text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+	-webkit-appearance: none;
+	-webkit-user-select: text;
+	/*   outline-color: transparent;*/
+	box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+	font-size: 17px;
+	padding: 25px 12px;
+}
+
+.text-b {
+	
+}
+
+.btndiv1, .divreg {
+	width: 90%;
+	margin: 20px auto;
+	background-color: #eeeeee;
+}
+
+.btn1 {
+	width: 100%;
+	height: 44px;
+	background-color: #eeeeee;
+	font-size: 20px;
+	color: #d1d1d1;
+	border-color: #eeeeee;
+	box-shadow: none;
+}
+
+#btn {
+	box-shadow: none;
+	text-shadow: none;
+	outline: none;
+	border: none;
+}
 
 .pull-left {
-    float: left !important;
+	float: left !important;
 }
+
 .pull-right {
-    float: right !important;
+	float: right !important;
 }
 
-a:link,a:visited{
-    color: #969696;
-    font-size:16px;
-    text-decoration: none;
+a:link, a:visited {
+	color: #969696;
+	font-size: 16px;
+	text-decoration: none;
 }
 
-
-.login3{
-    margin: 65% auto;
-    width:80%;
-
-}
-.vx_qq{
-    width:56px;
-    height:77px;
-
+.login3 {
+	margin: 65% auto;
+	width: 80%;
 }
 
-.span1{
-    background-color:white;
-    border: 0px;
-
-
-
-
-
-}
-.input-pass{
-    width:88%;
-    height:10%;
-}
-.input-username{
-    margin-left:5%;
-    width:89.8%;
-
+.vx_qq {
+	width: 56px;
+	height: 77px;
 }
 
-#img1,#img2{
-    padding: 14px;
+.span1 {
+	background-color: white;
+	border: 0px;
+}
 
+.input-pass {
+	width: 88%;
+	height: 10%;
 }
-.show{
-    display: block;
-}
-.hid{
-    display: none;
-}
-h4{
-    margin-left: -9px;
-    font-weight:600;
 
+.input-username {
+	margin-left: 5%;
+	width: 89.8%;
+}
+
+#img1, #img2 {
+	padding: 14px;
+}
+
+.show {
+	display: block;
+}
+
+.hid {
+	display: none;
+}
+
+h4 {
+	margin-left: -9px;
+	font-weight: 600;
 }
